--- a/QLSV/appsettings.json
+++ b/QLSV/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=MSI\\SQLEXPRESS2014;Initial Catalog=SinhVienAPI;Integrated Security=True"
+    "SqlConnection": "Data Source=MSI\\SQLEXPRESS2014;Initial Catalog=SinhVienAPI;Integrated Security=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
